--- a/se7ati_project/se7ati_app/templates/includes/sidebar.html
+++ b/se7ati_project/se7ati_app/templates/includes/sidebar.html
@@ -119,6 +119,25 @@
       </li>
       <li>
         <a
+          href="{% url 'chat_bot' %}"
+          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
+        >
+        <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
+        </svg>
+        
+            <path
+              d="M10 0C4.486 0 0 4.486 0 10s4.486 10 10 10 10-4.486 10-10S15.514 0 10 0zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
+            />
+            <path
+              d="M10 4C7.794 4 6 5.794 6 8s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
+            />
+          </svg>
+          <span class="ms-3">Ai Assistant</span>
+        </a>
+      </li>
+      <li>
+        <a
           href="#"
           class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
         >
